--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.4.5",
+    "puppeteer": "^23.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
