--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.4.5",
+    "nodemailer": "^6.9.15",
     "puppeteer": "^23.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
