--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.5",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/websockets": "^10.4.5",
     "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
